# stereo_capture_rig

./: .gitignore  LICENSE  README.md
hardware/: handle.3mf  mounting_plate.3mf
software/: CMakeLists.txt  zed_common.hpp  zed_export.cpp  zed_export.py  zed_record.cpp
